feat: capitalize my name

--- a/title-screen/index.html
+++ b/title-screen/index.html
@@ -14,7 +14,7 @@
         </section>
     </main>
     <footer>
-        seanmcp
+        SeanMcP
     </footer>
     <script src="./script.js"></script>
 </body>
