--- a/title-screen/index.html
+++ b/title-screen/index.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title Screen – seanmcp</title>
+    <title>Title Screen – SeanMcP</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -14,7 +14,7 @@
         </section>
     </main>
     <footer>
-        seanmcp
+        SeanMcP
     </footer>
     <script src="./script.js"></script>
 </body>
